# qtjack_bpm_tab

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindJack.cmake
include/: avrg_queue.h  avrg_queue.hpp  bpm_tab.h  bpm_tab.hpp  mididial_mainwindow.h  mididial_mainwindow.hpp  mp3player_mainwindow.h  mp3player_mainwindow.hpp  sine_wave.h  sine_wave.hpp  sinedial_mainwindow.h  sinedial_mainwindow.hpp  super_circular_buffer.hpp  wave_widget.h  wave_widget.hpp
include/beatthis/: combfilter.hpp  differectifier.hpp  envelope_extractor.hpp  filterbank.hpp
include/bpmdetection/: PhaseVocoder.h  analyzerplugin.hpp  analyzerqueenmarybeats.hpp  buffering_utils.hpp  constants.h  detection_function.hpp
include/maths/: FFT.h  MathAliases.h  MathUtilities.h  _kiss_fft_guts.h  kiss_fftr.h
include/test/: main_window_test.h  main_window_test.hpp
include/util/: assert.h  sample.h
src/: avrg_queue.cpp  bpm_tab.cpp  bpm_tab.ui  bpm_tab_main.cpp  wave_widget.cpp
src/beatthis/: combfilter.cpp  differectifier.cpp  envelope_extractor.cpp  filterbank.cpp
src/bpmdetection/: PhaseVocoder.cpp  TempoTrackV2.cpp  analyzerqueenmarybeats.cpp  buffering_utils.cpp  detection_function.cpp
src/maths/: FFT.cpp  MathUtilities.cpp  kiss_fftr.c
src/test/: avrg_queue_test.cpp  beatthis_memory_test.cpp  beatthis_test.cpp  combfilter_test.cpp  differectifier_test.cpp  envelope_extractor_test.cpp  filterbank_test.cpp  main_window_test.cpp  super_circular_buffer_test.cpp  wave_widget_test.cpp
src/util/: sample.cpp
